Header: fixed scroll gap

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -80,7 +80,6 @@ mat-icon:hover{
   z-index: 10;
 }
 
-
-.sticky + .content {
-  padding-top: 60px;
+.spaceHolder{
+  height: 64px;
 }
